src/test/deca/codegen/valid/operations/opArithConv.deca
// Description :
//    Test des opérations arithmétiques entre int et float
//
// Resultats :
//    1.1 + 2 = 3.10000e+00
//    1.1 - 2 = -9.00000e-01
//    42 - 42.0 = 0.00000e+00
//    10 * 4.2 = 4.20000e+01
//    4.0 / 3 = 1.33333e+00
//    4 / 3.0 = 1.33333e+00

{
    println("1.1 + 2 = ", 1.1 + 2);
    println("1.1 - 2 = ", 1.1 - 2);
    println("42 - 42.0 = ", 424242.0 - 424242);
    println("10 * 4.2 = ", 10 * 4.2);
    println("4.0 / 3 = ", 4.0 / 3);
    println("4 / 3.0 = ", 4 / 3.0);
}